--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ categories = ["embedded", "hardware-support", "no-std::no-alloc"]
 [dependencies]
 embedded-hal = "1.0.0"
 embedded-hal-bus = "0.2.0"
+thiserror = { version = "2.0.11", default-features = false }
